manifests/zobsai-backend-cron-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zobsai-backend-cron
  namespace: zobsai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zobsai-backend-cron
  template:
    metadata:
      labels:
        app: zobsai-backend-cron
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: backend-cron
          image: ghcr.io/zobsai-com/zobsai-backend:28361a931b05a2b3137073fa1baf93c02dd4d53f
          imagePullPolicy: Always
          command:
            - node
            - cron-worker.js
