manifests/zobsai-uni-company-panel-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uni-company-panel # Changed _ to -
  namespace: zobsai
  annotations:
    argocd.argoproj.io/compare-options: IgnoreExtraneous
  labels:
    app: uni-company-panel
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: uni-company-panel
  template:
    metadata:
      labels:
        app: uni-company-panel
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: uni-company-panel
          image: ghcr.io/zobsai-com/zobsai-uni-company-panel:d7300bf41daf1da88f42c8449586ae6e39da01d4
          imagePullPolicy: Always
          ports:
            - containerPort: 3002
