manifests/zobsai-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zobsai-backend
  namespace: zobsai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zobsai-backend
  template:
    metadata:
      labels:
        app: zobsai-backend
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: backend
          image: ghcr.io/zobsai-com/zobsai-backend:f40c4149c107dd6fa5b8564318fc34496b523b63
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: zobsai-backend
  namespace: zobsai
spec:
  selector:
    app: zobsai-backend
  ports:
    - port: 8080 # Service port
      targetPort: 8080 # Container port
      nodePort: 30070 # External port on the node (must be between 30000–32767)
  type: NodePort
