manifests/zobsai-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zobsai-frontend
  namespace: zobsai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zobsai-frontend
  template:
    metadata:
      labels:
        app: zobsai-frontend
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: frontend
          image: ghcr.io/zobsai-com/zobsai-frontend:584c8a9cbed7049d8b6008f8995bb36b17d41cf4
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: zobsai-frontend
  namespace: zobsai
spec:
  type: NodePort
  selector:
    app: zobsai-frontend
  ports:
    - port: 3000 # Service port
      targetPort: 3000 # Container port
      nodePort: 30090 # NodePort (30000-32767)
