manifests/zobsai-uni-company-panel-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zobsai-uni-company-panel
  namespace: zobsai
spec:
  type: NodePort
  selector:
    app: uni-company-panel   # <-- must match pod labels
  ports:
    - port: 3002
      targetPort: 3002
